force-app/main/default/objects/Account_Goal__c/Account_Goal__c.object-meta.xml
<CustomObject>
    <label>Account Goal</label>
    <nameField>
        <label>Account Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Goal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>