force-app/main/default/objects/Account_Goal__c/fields/Column_10__c.field-meta.xml
<CustomField>
    <fullName>Column_10__c</fullName>
    <label>Column 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>