force-app/main/default/objects/Account_Goal__c/fields/Column_11__c.field-meta.xml
<CustomField>
    <fullName>Column_11__c</fullName>
    <label>Column 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>