force-app/main/default/objects/Account_Goal__c/fields/Column_12__c.field-meta.xml
<CustomField>
    <fullName>Column_12__c</fullName>
    <label>Column 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>