force-app/main/default/objects/Account_Goal__c/fields/Target_Year__c.field-meta.xml
<CustomField>
    <fullName>Target_Year__c</fullName>
    <label>Year</label>
    <length>254</length>
    <required>true</required>
    <type>Text</type>
</CustomField>